tests/errors/compiler/initializer_in_ternary.c
void main()
{
	int a;
	a ? 4 : { 5, 0 };
	a ? { 5, 0 } : 4;
}
